--- a/wercker.yml
+++ b/wercker.yml
@@ -22,7 +22,7 @@ deploy:
         - script:
             name: PyPI upload
             code: |
-                echo "[pypi]" > ~/.pypirc
+                echo "[server-login]" > ~/.pypirc
                 echo "username:$PYPI_USER" >> ~/.pypirc
                 echo "password:$PYPI_PASSWORD" >> ~/.pypirc
                 python setup.py sdist upload
