All tests pass on python 2.7.8 and 3.4.2

--- a/wercker.yml
+++ b/wercker.yml
@@ -10,6 +10,9 @@ build:
             name: Install remodel
             code: pip install .
         - script:
+            name: Install six
+            code: pip install six
+        - script:
             name: Install test dependencies
             code: pip install tox
         - script:
