--- a/wercker.yml
+++ b/wercker.yml
@@ -11,7 +11,7 @@ build:
             code: pip install .
         - script:
             name: Install six
-            code: pip install six 1.9.0
+            code: pip --upgrade install six
         - script:
             name: Install test dependencies
             code: pip install tox
