All tests pass on python 2.7.8 and 3.4.2

--- a/wercker.yml
+++ b/wercker.yml
@@ -5,13 +5,13 @@ services:
 build:
     steps:
         - virtualenv:
-            install_wheel: false
+            install_wheel: true
         - script:
             name: Install remodel
             code: pip install .
         - script:
-            name: Install six
-            code: pip install --upgrade six
+            name: Install python-dateutil (for six)
+            code: pip install python-dateutil
         - script:
             name: Install test dependencies
             code: pip install tox
@@ -20,12 +20,4 @@ build:
             code: |
                 export RETHINKDB_HOST=$WERCKER_RETHINKDB_HOST
                 tox
-deploy:
-    steps:
-        - script:
-            name: PyPI upload
-            code: |
-                echo "[server-login]" > ~/.pypirc
-                echo "username:$PYPI_USER" >> ~/.pypirc
-                echo "password:$PYPI_PASSWORD" >> ~/.pypirc
-                python setup.py sdist upload
+
