--- a/wercker.yml
+++ b/wercker.yml
@@ -7,11 +7,17 @@ build:
         - virtualenv:
             install_wheel: false
         - script:
+            name: RethinkDB version
+            code: rethinkdb --version
+        - script:
             name: Install remodel
             code: pip install .
         - script:
             name: Install test dependencies
             code: pip install tox
+        - script:
+            name: RethinkDB driver version
+            code: pip list
         - script:
             name: Run tests
             code: |
