--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
   - sudo apt-get update -qq
   - sudo apt-get install rethinkdb -y
+  - rethinkdb --version
 install:
   - pip install .
 before_script:
