Use RethinkDB addon on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,10 @@ python:
   - "2.7"
   - "3.4"
   - "3.5"
-before_install:
-  - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
-  - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
-  - sudo apt-get update -qq
-  - sudo apt-get install rethinkdb -y
-  - rethinkdb --version
+addons:
+  - rethinkdb: 2.3
 install:
   - pip install .
-before_script:
-  - rethinkdb --daemon
 script: py.test tests/
 deploy:
   provider: pypi
