--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
+dist: xenial
 language: python
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
+  - 2.7
+  - 3.4
+  - 3.5
+  - 3.6
+  - 3.7
 addons:
   - rethinkdb: 2.3
 install:
