--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ install:
 script: pytest
 deploy:
   provider: pypi
-  user: $PYPI_USER
-  password: $PYPI_PASSWORD
+  user: linkyndy
+  password:
+    secure: "K7lrgkEOm9bDf7EEBQqGxDjnjAVBpQTOec9PmFgB/C8YWUJhhI8mhs/b6JCh32p9AQACbUn/2BBUVqWnTL0exBPQNsVzkpUeaj9OZJD8kFjx0uv5YwDzjEufh1dMJNUYzx2J3KGcDvn6aKSP0RXxLCFF97a6WYc9YN8tutlSLbQ="
   on:
     tags: true
+  skip_existing: true
