--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
   rethinkdb: 2.3
 install:
   - pip install .[dev]
+# TODO: This is (hopefully) only temporary, until Travis fixes it
 before_script: sudo service rethinkdb stop && sudo service rethinkdb start
 script: pytest
 deploy:
